# ChangeLog for dev-ruby/ffi-rzmq
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*ffi-rzmq-1.0.3 (27 May 2014)
*ffi-rzmq-2.0.1 (27 May 2014)

  27 May 2014; Johann Schmitz <ercpe@gentoo.org> +ffi-rzmq-1.0.3.ebuild,
  +ffi-rzmq-2.0.1.ebuild, +metadata.xml:
  Added ffi-rzmq