@@ -1,2 +1,1 @@
-DIST ffi-rzmq-1.0.3.tar.gz 48797 SHA256 41e5e7f52bb83e2b1a03f5465c5b007ae7a4b4289db4af7f713198b52e3c6874 SHA512 0ebe45ca4b5982ced29739a4fd8f0e7614b4cee4305e74a9e7dc04090b626865633921d693718fb107f4a6b03817a1460d6360e0a97cc54e6e1acd80d82dda68 WHIRLPOOL 4de4a57ec174e5124d418de511465ebaf212f55d123121e51522b182be23b1a2ee7b8562418064ae5494a749b012ec116c2d9642fd6b80583e483b06a8ba4e99
 DIST ffi-rzmq-2.0.1.tar.gz 42121 SHA256 2a6d1eee0ca53d93660ae9c3c48b1e79ac3c4af0f0cb96993d2996c834dd8adc SHA512 9215f6325243abde9a2fcd19247fb467cb046ae9070155db2a89b81615a3aabf355a4aa61b06854b18be07e83fd2c8e49f821e99ad15c5d260d538e67aa4b554 WHIRLPOOL b8c3da77ac38f74d3f818a46bf86cf5775b6c1b500953be64667e0a65cd7af00471f89f48aeebf15718c0ec5c030ee38069dfd9a0540e69488696c14c123dfcf
