@@ -4,7 +4,9 @@
 
 EAPI=5
 
-USE_RUBY="ruby19"
+USE_RUBY="ruby19 ruby20"
+RUBY_FAKEGEM_RECIPE_DOC=""
+RUBY_FAKEGEM_RECIPE_TEST=""
 
 inherit ruby-fakegem
 
